@@ -1,3 +1,15 @@
+2002-05-02  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* pp/oprofpp.cpp:
+	* pp/op_time.cpp:
+	* pp/opf_container.cpp:
+	* pp/opf_filter.cpp:
+	* pp/oprofpp.cpp:
+	* pp/oprofpp.h:
+	* pp/oprofpp_util.cpp: fix sect_offset problem. now all
+	  class work on vma except samples_file_t which offset vma
+	  to samples files offset
+
 2002-05-01  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/opd_proc.c:
